--- a/docs/style.css
+++ b/docs/style.css
@@ -68,6 +68,22 @@
     font-size: smaller;
     font-family: 'Roboto', sans-serif;
 }
+.button {
+    display: inline-block;
+    width: 150px;
+    height: 50px;
+    border: none;
+    border-radius: 8px;
+    padding: 14px 28px;
+    font-size: 16px;
+    cursor: pointer;
+    text-align: center;
+}
+
+.button:hover {
+    background-color: #ddd;
+    color: black;
+}
 
 /* Medium screens */
 @media all and (min-width: 600px) {
